  was implemented. Fix this by using a remote lock file and running
  prior to any install (inside install conditional) if it hasn't been
  run in last 1 hour by syncwrap.
* Add SyncWrap::Component#sh_if, sudo_if, and rudo_if helper methods
  for common bash conditionals.  Using these where applicable to
  simplify various internal components.
* SyncWrap::CRubyVM
  * Add hashes for 2.2.8, 2.3.5 and 2.4.2
  * Update default version to 2.3.5
* SyncWrap::JRubyVM; Add hash for 9.1.13.0 and make it the default
* SyncWrap::TarpitGem; default version 2.1.2
* SyncWrap::RakeGem; default version 12.1.0, support user_install
* Expand transitive dependency constraints for new releases:
  term-ansicolor, tins, json and nokogiri. The latest of some tins and
  nokogiri is incompatible with jruby 1.7.x (in 1.9 mode) which
  prompts dropping jruby 1.7.x from syncwrap's Travis CI. Compatible
  earlier versions are still available to users however.

=== 2.9.1 (2017-8-4)
* SyncWrap::JRubyVM
  * Avoid setting GEM_HOME environment var in the jruby 9.x installed
    profile by default. In 2.9.0, this was added as a substitute for
    the jruby.gem.home system property, which when set caused
    incessant warnings with 9.x. However setting GEM_HOME also
    undesirably effects gem bin wrapper install location. Instead just
    use the default in-dist path of jruby 9.x, and system gems will
    need to be re-installed with a jruby upgrade.
  * Add support for fast path gem user_install (no-op if same version
    specification is found)
* Fix error message for CLI -S (session) with host not found

=== 2.9.0 (2017-7-18)
* SyncWrap::Debian
  * Fix Debian#dist_if_installed? grep pattern. Was previously giving
    some (so far harmless) false positives for known but not-installed
    packages.
  * Make the dist_if_installed? and dist_if_not_installed? methods
    more friendly for external use, with default arguments.
  * Expose a dist_update for external/explicit use, including